[gd_scene load_steps=47 format=2]

[ext_resource path="res://assets/images/editor_ui/ToolBar/AddPressed.png" type="Texture" id=1]
[ext_resource path="res://assets/images/editor_ui/ToolBar/AddHover.png" type="Texture" id=2]
[ext_resource path="res://assets/images/editor_ui/ToolBar/Add.png" type="Texture" id=3]
[ext_resource path="res://assets/images/editor_ui/ToolBar/TileMapHover.png" type="Texture" id=4]
[ext_resource path="res://assets/images/editor_ui/ToolBar/TileMapPressed.png" type="Texture" id=5]
[ext_resource path="res://assets/images/editor_ui/ToolBar/TileMap.png" type="Texture" id=6]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ObjectHover.png" type="Texture" id=7]
[ext_resource path="res://assets/images/editor_ui/ToolBar/Object.png" type="Texture" id=8]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ObjectPressed.png" type="Texture" id=9]
[ext_resource path="res://assets/images/editor_ui/ToolBar/BackgroundHover.png" type="Texture" id=10]
[ext_resource path="res://assets/images/editor_ui/ToolBar/Background.png" type="Texture" id=11]
[ext_resource path="res://assets/images/editor_ui/ToolBar/BackgroundPressed.png" type="Texture" id=12]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ActiveScreenPressed.png" type="Texture" id=13]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ActiveScreenHover.png" type="Texture" id=14]
[ext_resource path="res://assets/images/editor_ui/ToolBar/Ladder.png" type="Texture" id=15]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ActiveScreen.png" type="Texture" id=16]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ScreenLock.png" type="Texture" id=17]
[ext_resource path="res://assets/images/editor_ui/ToolBar/SpikePressed.png" type="Texture" id=18]
[ext_resource path="res://assets/images/editor_ui/ToolBar/SpikeHover.png" type="Texture" id=19]
[ext_resource path="res://assets/images/editor_ui/ToolBar/LadderPressed.png" type="Texture" id=20]
[ext_resource path="res://assets/images/editor_ui/ToolBar/LadderHover.png" type="Texture" id=21]
[ext_resource path="res://src/utils/ButtonsToggler/ButtonsToggler.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/scenes/editor/ToolBar/ToolBar.gd" type="Script" id=23]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ScreenLockPressed.png" type="Texture" id=24]
[ext_resource path="res://src/utils/LockToggler/LockToggler.gd" type="Script" id=25]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ScreenLockHover.png" type="Texture" id=26]
[ext_resource path="res://assets/images/editor_ui/ToolBar/Spike.png" type="Texture" id=27]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ToogleTileAnimationsHover.png" type="Texture" id=28]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ToogleTileAnimationsPressed.png" type="Texture" id=29]
[ext_resource path="res://assets/images/editor_ui/ToolBar/ToogleTileAnimations.png" type="Texture" id=30]

[sub_resource type="InputEventKey" id=1]
scancode = 49

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 50

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 51

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 52

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 53

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=11]
scancode = 54

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=13]
scancode = 55

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="InputEventKey" id=15]
scancode = 56

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[node name="ToolBar" type="Panel"]
self_modulate = Color( 0, 0.505882, 1, 0.752941 )
anchor_right = 1.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 23 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjVBox" type="VBoxContainer" parent="HBoxContainer"]
visible = false
margin_right = 50.0
margin_bottom = 50.0
size_flags_vertical = 0

[node name="CategoryLabel" type="Label" parent="HBoxContainer/ObjVBox"]
margin_right = 50.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Objects"

[node name="AddBtn" type="TextureButton" parent="HBoxContainer/ObjVBox"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Insert New Object

Add a new game object with customizable properties."
focus_mode = 0
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditModeVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 252.0
margin_bottom = 50.0
size_flags_vertical = 0

[node name="CategoryLabel" type="Label" parent="HBoxContainer/EditModeVBox"]
margin_right = 252.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Edit Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/EditModeVBox"]
margin_top = 18.0
margin_right = 252.0
margin_bottom = 50.0
custom_constants/separation = 12

[node name="ButtonsToggler" parent="HBoxContainer/EditModeVBox/HBoxContainer" instance=ExtResource( 22 )]

[node name="ObjectBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Object Edit Tool:
* Left Button: Add to current selection or move selected object."
focus_mode = 0
toggle_mode = true
pressed = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 2 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMapBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox/HBoxContainer"]
margin_left = 44.0
margin_right = 76.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Tile Edit Tool:
* Left Button: Place tile.
* Right Button: Remove tile.
* Alt + Left Button: Pick a tile from the position of the cursor."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox/HBoxContainer"]
margin_left = 88.0
margin_right = 120.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Background Edit Tool:
* Left Button: Place tile.
* Right Button: Remove tile.
* Alt + Left Button: Pick a tile from the position of the cursor."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 6 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveScreenBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox/HBoxContainer"]
margin_left = 132.0
margin_right = 164.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Active Screen Edit Tool:
* Left Button: Disable screen.
* Right Button: Enable screen."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 8 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LadderBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox/HBoxContainer"]
margin_left = 176.0
margin_right = 208.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Ladder Edit Tool:
* Left Button: Place tile.
* Right Button: Remove tile.
* Alt + Left Button: Pick a tile from the position of the cursor."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 10 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 21 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SpikeBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox/HBoxContainer"]
margin_left = 220.0
margin_right = 252.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Spike Edit Tool:
* Left Button: Place tile.
* Right Button: Remove tile.
* Alt + Left Button: Pick a tile from the position of the cursor."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 12 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 260.0
margin_right = 264.0
margin_bottom = 64.0

[node name="EditModeVBox2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 272.0
margin_right = 357.0
margin_bottom = 50.0
size_flags_vertical = 0

[node name="CategoryLabel" type="Label" parent="HBoxContainer/EditModeVBox2"]
margin_right = 85.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "View Options"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/EditModeVBox2"]
margin_top = 18.0
margin_right = 85.0
margin_bottom = 50.0
custom_constants/separation = 12

[node name="LockToggler" parent="HBoxContainer/EditModeVBox2/HBoxContainer" instance=ExtResource( 22 )]
script = ExtResource( 25 )

[node name="LockBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox2/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Lock editor screen to prevent it from scrolling and accidental changes:
* Toggle on to lock the screen.
* Toggle off to unlock the screen."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 14 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 26 )
expand = true
stretch_mode = 3
__meta__ = {
"editor_config_property": "locked_keyboard"
}

[node name="ToggleTileAnimationsBtn" type="TextureButton" parent="HBoxContainer/EditModeVBox2/HBoxContainer"]
margin_left = 44.0
margin_right = 76.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Toggle tile animations in the editor window and in previews:
* Toggle on to play animations.
* Toggle off to stop animations."
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 16 )
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 28 )
expand = true
stretch_mode = 3
__meta__ = {
"editor_config_property": "animate_tiles"
}

[connection signal="pressed" from="HBoxContainer/ObjVBox/AddBtn" to="." method="_on_AddBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/ButtonsToggler" to="." method="_on_ButtonsToggler_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/ObjectBtn" to="." method="_on_ObjectBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/TileMapBtn" to="." method="_on_TileMapBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/BgBtn" to="." method="_on_BgBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/ActiveScreenBtn" to="." method="_on_ActiveScreenBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/LadderBtn" to="." method="_on_LadderBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox/HBoxContainer/SpikeBtn" to="." method="_on_SpikeBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox2/HBoxContainer/LockBtn" to="." method="_on_LockBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/EditModeVBox2/HBoxContainer/ToggleTileAnimationsBtn" to="." method="_on_ToggleTileAnimations_pressed"]
